--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,9 @@
   display: flex;
   justify-content: center;
  }
- .particles{
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+ .particles canvas{
+  position: absolute;
+  height: 100%;
+  width: 100%;
   z-index: -1;
  }
